<resources>
    <string name="app_name">Manaflux</string>
    <string name="app_title">MANAFLUX</string>

    <string name="scan_save">SAVE</string>
    <string name="scan_select">SELECT</string>
    <string name="scan_invalid">Invalid QR code</string>
    <string name="scan_not_detected">No QR code detected</string>
    <string name="scan_stop">Scanner has been stopped</string>

    <string name="edit_title">Edit/Add PC</string>
    <string name="edit_save">SAVE</string>
    <string name="edit_input">IP address</string>
    <string name="edit_scan">SCAN</string>
    <string name="edit_pc">PC name</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_select">Select</string>

    <string name="description_underline">underline</string>
    <string name="description_close">close</string>
    <string name="description_save">save</string>

    <string name="dialog_info">DEVICE INFO</string>
    <string name="dialog_address">Address</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_null">Can not be empty</string>

    <string name="select_device">Select device</string>
    <string name="select_on_lan">Devices on Lan</string>
    <string name="select_settings">Settings</string>
    <string name="select_other">Other devices</string>
    <string name="select_refresh">Refresh</string>

    <string name="save_devices">Saved devices</string>
    <string name="save_add">Add</string>
    <string name="save_scan">SCAN</string>
    <string name="save_permission">Camera permission is needed</string>

    <string name="settings_background">Background</string>
    <string name="settings_title">Settings</string>
    <string name="settings_delete_device">Delete device</string>
    <string name="settings_delete">Delete</string>
    <string name="settings_delete_all">Delete all</string>
    <string name="settings_service">Service</string>
    <string name="settings_service_open">Open</string>

    <string name="error_again">Try again</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="error_details">Details</string>
    <string name="error_restart">Restart</string>
    <string name="error_auth_success">Device successfully authentified</string>

    <string name="background_default">Default</string>
    <string name="background_red">Red</string>
    <string name="background_purple">Purple</string>
    <string name="background_green">Green</string>
    <string name="background_gray">Gray</string>
    <string name="background_dark_red">Dark red</string>

    <string name="db_fail">Unable to save</string>
    <string name="db_success">Updated Successfully</string>

    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>

    <string name="champion_select_changed">Changed position to: </string>
    <string name="champion_select_error">Something went wrong :(</string>
    <string name="champion_in">In champion select…</string>

    <string name="on_back_title">Closing Activity</string>
    <string name="on_back_message">Are you sure you want to close this activity ?</string>

    <string name="service_start">Start</string>
    <string name="service_stop">Stop</string>
    <string name="service_running">Service is running</string>
    <string name="service_not_running">Service is not running</string>

    <string name="autostart_title">Autostart</string>
</resources>
