<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/select_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/default_bg">

    <com.github.kko7.manaflux_android.CustomElements.TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:text="@string/select_device"
        android:textAlignment="center"
        android:textSize="24sp" />

    <com.github.kko7.manaflux_android.CustomElements.TextView
        android:id="@+id/lan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/select_on_lan"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lanList"
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:layout_below="@+id/lan_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp" />

    <com.github.kko7.manaflux_android.CustomElements.ButtonView
        android:id="@+id/settings_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/button_bg"
        android:text="@string/select_settings" />

    <com.github.kko7.manaflux_android.CustomElements.ButtonView
        android:id="@+id/other_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/settings_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_bg"
        android:text="@string/select_other" />

    <com.github.kko7.manaflux_android.CustomElements.ButtonView
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_above="@+id/settings_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_bg"
        android:text="@string/select_refresh" />

</RelativeLayout>