<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:orientation="horizontal"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp">

        <com.github.kko7.manaflux_android.CustomElements.TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/dialog_info"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addressEditTxt"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/nameEditTxt"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/dialog_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:targetApi="o" />

        <com.github.kko7.manaflux_android.CustomElements.ButtonView
            android:id="@+id/saveBtn"
            style="@style/Widget.AppCompat.Button"

            android:layout_width="125dp"
            android:layout_height="35dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/btn_default"

            android:gravity="center_vertical|start"
            android:text="@string/dialog_save"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</android.support.v7.widget.CardView>